Fix PR44676: fix invariant phi node removal.

Backport from trunk
http://gcc.gnu.org/viewcvs?view=revision&revision=163105

2010-05-07  Sebastian Pop  <sebastian.pop@amd.com>

	Backport from mainline:
	2010-05-07  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/44676
	* graphite-sese-to-poly.c (loop_entry_phi_arg): Renamed
	phi_arg_in_outermost_loop.
	(remove_simple_copy_phi): Call phi_arg_in_outermost_loop.
	(remove_invariant_phi): Same.

From-SVN: r167542